new item, smithing sounds when crafting and new config serializer

--- a/src/main/resources/assets/hammersandtables/lang/en_us.json
+++ b/src/main/resources/assets/hammersandtables/lang/en_us.json
@@ -8,6 +8,7 @@
   "item.minecraft.golden_sword": "Shiny Golden Sword",
   "item.minecraft.golden_hoe": "Shiny Golden Hoe",
   "item.minecraft.golden_shovel": "Shiny Golden Shovel",
+  "item.hammersandtables.shiny_golden_hammer": "Shiny Golden Hammer",
 
   "item.hammersandtables.copper_pickaxe": "Copper Pickaxe",
   "item.hammersandtables.copper_axe": "Copper Axe",
@@ -112,10 +113,11 @@
   "text.autoconfig.hammersandtables.title": "Hammers and Smithing Config",
   "text.autoconfig.hammersandtables.category.recipes": "Items and Recipes",
   "text.autoconfig.hammersandtables.category.trades": "Trade Offers",
-  "text.autoconfig.hammersandtables.category.tooltips": "Tooltips",
+  "text.autoconfig.hammersandtables.category.tooltips": "Tooltips and Sounds",
   "text.autoconfig.hammersandtables.option.isTooltipsEnabled": "Add tooltips for items, that require smithing table to craft [Restart Required]",
   "text.autoconfig.hammersandtables.option.isTooltipsEnabled.@Tooltip": "Adds tooltips telling you which smithing table is required to craft item",
   "text.autoconfig.hammersandtables.option.isTooltipsForGoldenItemsEnabled": "Add tooltips for items that can be used to trade with piglins [Restart Required]",
+  "text.autoconfig.hammersandtables.option.isSoundsWhenCraftingEnabled": "Play smithing sounds when crafting items that require smithing table, and extinguish sound when smelting [Restart Required]",
   "text.autoconfig.hammersandtables.option.isCopperRecipeBlocked": "Block copper recipes [Restart required]",
   "text.autoconfig.hammersandtables.option.isCopperRecipeBlocked.@Tooltip": "Copper items cannot be crafted if you don't stand near Copper Smithing Table (or better smithing table)",
   "text.autoconfig.hammersandtables.option.isIronRecipeBlocked": "Block iron recipes [Restart required]",
