--- a/src/main/resources/assets/hammersandtables/lang/en_us.json
+++ b/src/main/resources/assets/hammersandtables/lang/en_us.json
@@ -110,6 +110,10 @@
   "item.hammersandtables.diamond_golden_leggings": "Reinforced Golden Leggings",
   "item.hammersandtables.diamond_golden_boots": "Reinforced Golden Boots",
 
+  "item.hammersandtables.diamond_reinforcement_smithing_template": "Smithing Template",
+  "item.hammersandtables.golden_upgrade_smithing_template": "Smithing Template",
+  "item.hammersandtables.iron_upgrade_smithing_template": "Smithing Template",
+
   "text.autoconfig.hammersandtables.title": "Hammers and Smithing Config",
   "text.autoconfig.hammersandtables.category.recipes": "Items and Recipes",
   "text.autoconfig.hammersandtables.category.trades": "Trade Offers",
@@ -161,5 +165,7 @@
   "container.upgrade.wrong_smithing_table_tooltip": "Wrong recipe or better smithing table required",
   "container.upgrade.wrong_hammer_tooltip": "Better hammer required",
   "container.upgrade.wrong_addition_count_tooltip": "More ingredients required",
-  "container.upgrade.hammer_slot_decription": "Add hammer"
+  "container.upgrade.hammer_slot_decription": "Add hammer",
+
+  "text.hammersandtables.smithing_table_tooltip": "Only Villagers know how to use it..."
 }
