wooden and stone hammers + sword parry compat

--- a/src/main/resources/assets/hammersandtables/lang/pl_pl.json
+++ b/src/main/resources/assets/hammersandtables/lang/pl_pl.json
@@ -1,4 +1,7 @@
 {
+  "item.hammersandtables.wooden_hammer": "Drewniany Młot",
+  "item.hammersandtables.stone_hammer": "Kamienny Młot",
+
   "item.minecraft.golden_helmet": "Lśniący Złoty Hełm",
   "item.minecraft.golden_chestplate": "Lśniący Złoty Napierśnik",
   "item.minecraft.golden_leggings": "Lśniące Złote Nogawice",
@@ -166,6 +169,24 @@
   "container.upgrade.wrong_addition_count_tooltip": "Potrzeba więcej składników",
   "container.upgrade.hammer_slot_decription": "Dodaj młot",
 
-  "text.hammersandtables.smithing_table_tooltip": "Tylko Osadnicy wiedzą jak tego użyć..."
+  "text.hammersandtables.smithing_table_tooltip": "Tylko Osadnicy wiedzą jak tego użyć...",
 
+
+
+  "text.autoconfig.hammersandtables.category.hammer": "Młoty (Kompatybilność ze Sword Parry)",
+
+  "text.autoconfig.hammersandtables.option.hammerParryTicks": "Ticki parowania",
+  "text.autoconfig.hammersandtables.option.hammerParryTicks.@Tooltip": "Przykład: kiedy ustawione na 10, pierwsze 10 ticków blokowania będzie liczone jako parowanie",
+  "text.autoconfig.hammersandtables.option.hammerBlockMeleeDamageTaken": "% otrzymywanych obrażeń po zablokowaniu ataku wręcz",
+  "text.autoconfig.hammersandtables.option.hammerBlockMeleeDamageTaken.@Tooltip": "Przykład: kiedy ustawione na 15, gracz otrzyma 15% oryginalnych obrażeń po zablokowaniu ataku wręcz",
+  "text.autoconfig.hammersandtables.option.hammerBlockArrowDamageTaken": "% otrzymywanych obrażeń po zablokowaniu pocisku",
+  "text.autoconfig.hammersandtables.option.hammerBlockArrowDamageTaken.@Tooltip": "Przykład: kiedy ustawione na 90, gracz otrzyma 90% oryginalnych obrażeń po zablokowaniu pocisku",
+  "text.autoconfig.hammersandtables.option.hammerParryKnockbackStrength": "Siła odrzutu z parowania",
+  "text.autoconfig.hammersandtables.option.hammerSlownessAfterParry": "Długość spowolnienia z parowania",
+  "text.autoconfig.hammersandtables.option.hammerSlownessAfterParryAmplifier": "Moc spowolnienia z parowania",
+  "text.autoconfig.hammersandtables.option.hammerWeaknessAfterParry": "Długość osłabienia z parowania",
+  "text.autoconfig.hammersandtables.option.hammerWeaknessAfterParryAmplifier": "Moc osłabienia z parowania",
+  "text.autoconfig.hammersandtables.option.hammerDisarmAfterParry": "Długość rozbrojenia z parowania (tylko dla graczy)",
+  "text.autoconfig.hammersandtables.option.cooldownAfterInterruptingHammerBlockAction": "Czas odnowienia po zmianie przedmiotu, zablokowaniu ataku, lub przerwaniu blokowania",
+  "text.autoconfig.hammersandtables.option.cooldownAfterHammerParryAction": "Czas odnowienia po sparowaniu ataku lub pocisku"
 }
